// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid renders wrapped Col correctly 1`] = `
<div
  class="ty-row"
  style="margin-left:-10px;margin-right:-10px"
>
  <div>
    <div
      class="ty-col ty-col-12"
      style="padding-left:10px;padding-right:10px"
    />
  </div>
  <div
    class="ty-col ty-col-12"
    style="padding-left:10px;padding-right:10px"
  />
</div>
`;

exports[`Grid should render Col 1`] = `
<div
  class="ty-col ty-col-2"
/>
`;

exports[`Grid should render Row 1`] = `
<div
  class="ty-row"
/>
`;
